--- a/KnnMedAbv.ipynb
+++ b/KnnMedAbv.ipynb
@@ -1,6 +1,16 @@
 {
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/ekansh2004/MLProject/blob/main/KnnMedAbv.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
@@ -979,7 +989,9 @@
   ],
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyPyy6j8B52eMiWrUYZK9NTl",
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
